--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,13 +1,7 @@
-* { box-sizing: border-box; }
-
 html, body {
   background-color: lightgrey;
   width: 100%;
   height: 100%;
-}
-
-body {
-  overflow: hidden;
 }
 
 #root {
@@ -15,19 +9,10 @@ body {
   height: 100%;
 }
 
-.panel {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(6, 1fr);
-  grid-gap: 10px;
-  padding: 10px;
-}
-
-.tile {
-  position: relative;
+.box {
+  width: 100px;
+  height: 100px;
+  margin: 10px;
   /*
   If touch-action: none is not used, I get the following warning in Chrome:
   [Intervention] Unable to preventDefault inside passive event listener due
@@ -35,14 +20,4 @@ body {
   https://www.chromestatus.com/features/5093566007214080
   */
   touch-action: none;
-}
-
-.tile > img {
-  max-width: 100%;
-  max-height: 100%;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
